# sawtooth-prune-db

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
protos/: authorization.proto  batch.proto  block.proto  block_info.proto  client_batch.proto  client_batch_submit.proto  client_block.proto  client_event.proto  client_list_control.proto  client_peers.proto  client_receipt.proto  client_state.proto  client_status.proto  client_transaction.proto  consensus.proto  events.proto  genesis.proto  identity.proto  merkle.proto  network.proto  processor.proto  setting.proto  state_context.proto  transaction.proto  transaction_receipt.proto  validator.proto
src/: error.rs  ext.rs  hash.rs  main.rs  merk.rs  merkle.rs  proto.rs  stopwatch.rs
src/database/: lmdb.rs
src/state/: mod.rs
