[package]
name = "db-size-profile"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
async-std = "1.10.0"
cbor-codec = "0.7.1"
color-eyre = "0.5.11"
derive_more = "0.99.16"
heed = "0.11.0"
hex = "0.4.3"
lmdb-zero = "0.4.4"
log = "0.4.14"
parallel-stream = "2.1.3"
prost = "0.9.0"
protobuf = "2.25.2"
send_wrapper = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_cbor = "0.11.2"
sha2 = "0.9.8"

[build-dependencies]
glob = "0.3.0"
prost-build = "0.9.0"
protoc-rust = "2.25.2"
