[package]
name = "sawtooth-prune-db"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
clap = "3.0.0-beta.5"
color-eyre = "0.5.11"
derive_more = "0.99.16"
heed = "0.11.0"
log = "0.4.14"
parking_lot = "0.11.2"
pretty_env_logger = "0.4.0"
prost = "0.9.0"
protobuf = "2.25.2"
rayon = "1.5.1"
send_wrapper = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"

[build-dependencies]
glob = "0.3.0"
prost-build = "0.9.0"
protoc-rust = "2.25.2"
