[package]
name = "sawtooth-prune-db"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[features]

[dependencies]
clap = "3.0.0-beta.5"
color-eyre = "0.5.11"
crossbeam = "0.8.1"
dashmap = "4.0.2"
derive_more = "0.99.16"
fs-err = "2.6.0"
fxhash = "0.2.1"
heed = "0.11.0"
indexmap = "1.7.0"
indicatif = "0.16.2"
log = "0.4.14"
num_cpus = "1.13.0"
once_cell = "1.8.0"
parking_lot = "0.11.2"
pretty_env_logger = "0.4.0"
prost = "0.9.0"
rayon = "1.5.1"
send_wrapper = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"

[build-dependencies]
glob = "0.3.0"
prost-build = "0.9.0"
